<resources>
    <string name="app_name">ESPIOT</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_username">Incorrect username</string>
    <string name="error_username_used">Username already used please pick another</string>
    <string name="error_email_address_registered">Email address already registered</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">IOT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="user_name">Username</string>
    <string name="removedevice">Remove Device</string>
    <string name="remove_device_dialog_message">Are you sure you want to remove device?</string>
    <string name="remove_device_dialog_title">Device removal</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deviceInformation">Device Information</string>
    <string name="device_information_title">Device Infromation</string>
    <string name="updatename">Update Device Name</string>
    <string name="title_activity_remote">RemoteActivity</string>
    <string name="tab_text_1">TV</string>
    <string name="tab_text_2">FAN</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="TV">TV</string>
    <string name="channel">Channel</string>
    <string name="volume">Volume</string>
    <string name="ion">Ion</string>
    <string name="rotation">Rotation</string>
    <string name="quite_mode">Quite Mode</string>
    <string name="fan_speed">Fan Speed</string>
    <string name="fan_power">Fan Power</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="name">Name</string>
    <string name="_0">0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="serverAddressName">Server Address</string>
    <string name="portNumberWebSocketName">Port Number For Web Socket</string>
    <string name="portNumberWebServerName">Port Number For Web Server</string>
    <string name="pref_default_server_address">matthewbulat.com</string>
    <string name="pref_default_port_number_web_socket">8080</string>
    <string name="pref_default_port_number_web_server">80</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="add_new_device">Add New Device</string>
    <string name="settings">Settings</string>
    <string name="pref_default_address_prefix">http://</string>
    <string name="api_address_prefix">https://</string>
</resources>
