<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FanRemoteControl">


    <Button
        android:id="@+id/ionButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/ion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/fanPowerButton" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/ion"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/ionButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/rotationButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/rotation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/quiteModeButton" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/rotation"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rotationButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/quiteModeButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/quite_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/fanSpeedButton" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/quite_mode"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/quiteModeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/fanSpeedButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/fan_speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/ionButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/fan_speed"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/fanSpeedButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/fanRemoteDeviceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/fan_power"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/fanPowerButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fanRemoteDeviceDescription" />

    <Button
        android:id="@+id/fanPowerButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/fan_power"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/fanRemoteDeviceDescription" />

</android.support.constraint.ConstraintLayout>