<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TVRemoteControl">

    <TextView
        android:id="@+id/tvRemoteDeviceDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/channelUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toTopOf="@+id/channelDown"
        app:layout_constraintEnd_toStartOf="@+id/volumeUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channelButtonsDescription" />

    <ImageButton
        android:id="@+id/channelDown"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toStartOf="@+id/volumeDown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/channelUp" />

    <ImageButton
        android:id="@+id/volumeUp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/arrow_up_float"
        app:layout_constraintBottom_toTopOf="@+id/volumeDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/channelUp"
        app:layout_constraintTop_toBottomOf="@+id/volumeButtonsDescription" />

    <ImageButton
        android:id="@+id/volumeDown"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/channelDown"
        app:layout_constraintTop_toBottomOf="@+id/volumeUp"
        android:contentDescription="TODO" />

    <ToggleButton
        android:id="@+id/tvPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/TV"
        app:layout_constraintBottom_toTopOf="@+id/channelButtonsDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemoteDeviceDescription" />

    <TextView
        android:id="@+id/channelButtonsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/volumeButtonsDescription"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/volumeButtonsDescription"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/volume"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/channelButtonsDescription"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>